--- a/jQuery/templates/selectedItemsTemplate.html
+++ b/jQuery/templates/selectedItemsTemplate.html
@@ -1,5 +1,5 @@
 <ul class="selected-items">
 	{% for item in items %}
-		{% include 'templates/itemTemplate.html' %}
+		{% include 'itemTemplate.html' %}
 	{% endfor %}
 </ul>
