--- a/jQuery/templates/itemTemplate.html
+++ b/jQuery/templates/itemTemplate.html
@@ -1,8 +1,8 @@
-<li class="item">
-	<div class="item-wrap">
-		<span>{{item}}</span>
-		{% if selected %}
-			<i class="icon">X</i>
+<li class="item-wrap {% if item.selected %}selected{% endif %}"  data-item="{{item.item}}" >
+	<div class="item">
+		<span>{{item.item}}</span>
+		{% if showClose %}
+			<i class="icon icon-close js-delete-item">X</i>
 		{% endif %}
 	</div>
 </li>
