--- a/jQuery/templates/selectItemsDialogTemplate.html
+++ b/jQuery/templates/selectItemsDialogTemplate.html
@@ -1,9 +1,9 @@
-<div>
-	<div class="js-search"></div>
-	<div class="js-filter"></div>
-	<div class="js-items-container"></div>
-	<div class="js-selected-items"></div>
-	<div class="js-confirm">
+<div class="select-items-dialog">
+	<div class="js-search search-box"></div>
+	<div class="js-filter filter-box"></div>
+	<div class="js-items-container item-container-wrap"></div>
+	<div class="js-selected-items selected-items"></div>
+	<div class="js-confirm button-container">
 		<a class="button js-confirm-button" href="#">Select</a>
 		<a class="button js-cancel-button" href="#">Cancel</a>
 	</div>
