--- a/marionette/js/templates/selectedItemsDialog.html
+++ b/marionette/js/templates/selectedItemsDialog.html
@@ -6,7 +6,7 @@
         </div>
         <div class="modal-body">
             <div class="filters"></div>
-            <div class="item-container"></div>
+            <div class="item-container-wrap"></div>
             <div class="selected-items"></div>
         </div>
         <div class="modal-footer">
