--- a/marionette/css/style.css
+++ b/marionette/css/style.css
@@ -1,84 +1,45 @@
-/* Space out content a bit */
-body {
-    padding-top: 20px;
-    padding-bottom: 20px;
+.item-wrap {
+	display: inline-block;
+	width: 150px;
+}
+.item {
+	padding: 5px;
+	background: #ccc;
+}
+.item i {
+	float: right;
+}
+.item i:hover {
+	cursor: pointer;
+	float: right;
+}
+.item:hover, .item.selected {
+	background: #aaa;
 }
 
-.jumbotron h1{
-    font-size: 48px;
+
+
+.item-container {
+	height: 300px;
+	overflow-y: auto;
+}
+.item-container .item-wrap {
+	display: block;
+	width:100%;
+}
+.item-container .item {
+	margin: 10px 5px;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-right: 15px;
-    padding-left: 15px;
+.item-container .item.disabled {
+	background: #eee;
 }
 
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-    padding-bottom: 19px;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
+.item-container .item.disabled:hover {
+	cursor: pointer;
+	background: #eee;
 }
 
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-}
-.container-narrow > hr {
-    margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-    padding: 14px 24px;
-    font-size: 21px;
-}
-
-#notification {
-    display: none;
-    position: fixed;
-    width: 700px;
-    z-index: 1;
-    opacity: .94;
-    top: 20px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-right: 0;
-        padding-left: 0;
-    }
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
-    }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
-    }
+.item-container .item:hover {
+	cursor: pointer;
 }
