--- a/marionette/js/templates/filters.html
+++ b/marionette/js/templates/filters.html
@@ -1,12 +1,12 @@
-<div>
-	<label for="search">Search:</label>
-	<input type="text" id="search"/>
+<div class="col-md-6">
+    <label for="search">Search:</label>
+    <input type="text" id="search"/>
 </div>
-<div>
-	<label for="filter">Filter:</label>
-	<select id="filter">
-		<option value="noFilter">No Filter</option>
-		<option value="gt100">Greater than 100</option>
-		<option value="gt200">Greater than 200</option>
-	</select>
+<div class="col-md-6">
+    <label for="filter">Filter:</label>
+    <select id="filter" class="filter">
+        <option value="noFilter">No Filter</option>
+        <option value="gt50">Greater than 50</option>
+        <option value="gt75">Greater than 75</option>
+    </select>
 </div>
