--- a/marionette/js/templates/selectedItemsDialog.html
+++ b/marionette/js/templates/selectedItemsDialog.html
@@ -1,17 +1,16 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4 class="modal-title" id="myModalLabel">Select items</h4>
         </div>
         <div class="modal-body">
-            <div class="filters"></div>
-            <div class="item-container-wrap"></div>
-            <div class="selected-items"></div>
+            <div class="filters-wrap row"></div>
+            <div class="item-container-wrap row"></div>
+            <div class="selected-items-wrap row"></div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-default btn-cancel">Cancel</button>
+            <button type="button" class="btn btn-confirm">Confirm</button>
         </div>
     </div>
 </div>
